samples/_failures_safe/1761349860_32f0a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02642b5b.c: In function ‘main’:
./samples/SAFE/__tmp_02642b5b.c:162:37: error: expected ‘;’ at end of input
  162 |         case 3: comp_type = COMP_LZW
      |                                     ^
      |                                     ;
./samples/SAFE/__tmp_02642b5b.c:162:9: error: expected declaration or statement at end of input
  162 |         case 3: comp_type = COMP_LZW
      |         ^~~~
./samples/SAFE/__tmp_02642b5b.c:162:9: error: expected declaration or statement at end of input
